# cursed1

./: .gitignore  Makefile  README  ZSO-Converter.cabal  convert_elf.c  convert_elf.h  converter  count.c  count.h  handle_flist.c  handle_flist.h  main.c  read_elf.c  read_elf.h  write_elf.c  write_elf.h
src/: Main.hs
