name:                ZSO-Converter
version:             0.1.0.0
synopsis:            Trampoline generator for task 1 ZSO 2020/21
homepage:            github.com/deutzia/cursed1
license:             MIT
author:              Iwona Kotlarska
maintainer:          pinus314@gmail.com
category:            Program
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10


executable trampoline_generator
  main-is:           Main.hs
  build-depends:     base >=4.13 && <4.14, containers >=0.6 && <0.7, mtl >=2.2 && <2.3, filepath >=1.4 && <1.5
  hs-source-dirs:    src
  default-language:  Haskell2010

